--- a/index.html
+++ b/index.html
@@ -93,17 +93,25 @@
 	  .append("g")
 	    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+	// default
+	let linkState = 'step1'
+	$("a.step-link").click(function(e) {
+		linkState = $(this).attr('id');
+		console.log('linkState', linkState);
+		redraw(linkState);
+  	});
+
 	// Get the data
-	d3.csv("data/epa2015_final.csv", function(error, data) {
+	d3.csv("data/epa2015_final1.csv", function(error, data) {
 	  if (error) throw error;
 
 	  data.forEach(function(d) {
 	    d.CO2 = +d.CO2;
-	    d.horse = +d.horse;
+	    d.weight = +d.weight;
 	  });
 
 	// Scale the range of the data
-	  x.domain(d3.extent(data, function(d) { return d.horse; })).nice();
+	  x.domain(d3.extent(data, function(d) { return d.weight; })).nice();
 	  y.domain(d3.extent(data, function(d) { return d.CO2; })).nice();
 
 	// Add the X Axis
@@ -116,7 +124,7 @@
 	      .attr("x", width)
 	      .attr("y", -6)
 	      .style("text-anchor", "end")
-	      .text("Rated Horsepower (foot-pounds per second)");
+	      .text("Weight in pounds");
 
 	// Add the Y Axis
 	  svg.append("g")
@@ -136,7 +144,7 @@
 	    .enter().append("circle")
 	      .attr("class", "dot")
 	      .attr("r", 3.5)
-	      .attr("cx", function(d) { return x(d.horse); })
+	      .attr("cx", function(d) { return x(d.weight); })
 	      .attr("cy", function(d) { return y(d.CO2); })
 	      .style("fill", function(d) { return color(d.type); })
 	      .on("mouseover", function(d){
@@ -178,6 +186,115 @@
 
 	});
 
+
+	function redraw(linkState) {
+		svg.selectAll("g").remove();
+		svg.selectAll(".dot").remove();
+		svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+		d3.csv("data/epa2015_final1.csv", function(error, data) {
+			// console.log('data is ', data);
+	  		if (error) throw error;
+			let columnName = 'weight';
+			let yText = '';
+			if (linkState === 'step1') {
+				columnName = 'weight';
+				yText = 'Weight in Pounds';
+			} else if (linkState === 'step2') {
+				columnName = 'mpg';
+				yText = 'Miles per Gallon';
+			} else if (linkState === 'step3') {
+				columnName = 'horse';
+				yText = 'HorsePower';
+			}
+			data.forEach(function (d) {
+				d.CO2 = +d.CO2;
+				if (linkState === 'step1') {
+					d.weight = +d.weight;
+				}
+				if (linkState === 'step2') {
+					d.mpg = +d.mpg;
+				}
+				if (linkState === 'step3') {
+					d.horse = +d.horse;
+				}
+			});
+
+			// Scale the range of the data
+			x.domain(d3.extent(data, function (d) { return d[columnName] })).nice();
+			y.domain(d3.extent(data, function (d) { return d.CO2; })).nice();
+
+			// Add the X Axis
+			svg.append("g")
+				.attr("class", "x axis")
+				.attr("transform", "translate(0," + height + ")")
+				.call(xAxis)
+				.append("text")
+				.attr("class", "label")
+				.attr("x", width)
+				.attr("y", -6)
+				.style("text-anchor", "end")
+				.text(yText);
+
+			// Add the Y Axis
+			svg.append("g")
+				.attr("class", "y axis")
+				.call(yAxis)
+				.append("text")
+				.attr("class", "label")
+				.attr("transform", "rotate(-90)")
+				.attr("y", 6)
+				.attr("dy", ".71em")
+				.style("text-anchor", "end")
+				.text("CO2 Emissions (grams per mile)")
+
+			// Add the Scatterplot
+			svg.selectAll(".dot")
+				.data(data)
+				.enter().append("circle")
+				.attr("class", "dot")
+				.attr("r", 3.5)
+				.attr("cx", function (d) { return x(d[columnName]) })
+				.attr("cy", function (d) { return y(d.CO2); })
+				.style("fill", function (d) { return color(d.type); })
+				.on("mouseover", function (d) {
+					d3.selectAll('.dot')
+						.filter(function (dot) {
+							return (dot.type != d.type)
+						})
+						.transition()
+						.style("opacity", 0.01)
+				})
+				.on("mouseout", function (d) {
+					d3.selectAll('.dot')
+						.filter(function (dot) {
+							return (dot.type != d.type)
+						})
+						.transition()
+						.style("opacity", 1)
+				});
+
+			// Add the Legend
+			var legend = svg.selectAll(".legend")
+				.data(color.domain())
+				.enter().append("g")
+				.attr("class", "legend")
+				.attr("transform", function (d, i) { return "translate(0," + i * 20 + ")"; });
+
+			legend.append("rect")
+				.attr("x", width - 18)
+				.attr("width", 18)
+				.attr("height", 18)
+				.style("fill", color);
+
+			legend.append("text")
+				.attr("x", width - 24)
+				.attr("y", 9)
+				.attr("dy", ".35em")
+				.style("text-anchor", "end")
+				.text(function (d) { return d; });
+
+		});
+	}
 	</script>
      </div>
     </div>
